its done completed

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ box-shadow:  11px 11px 22px #ca7ea4,
                 <h2>BabyGirl</h2>
             </div>
             <div class="butt">
-                <button> Next>></button>
+                <button onclick="window.location.href='doyouloveme.html'"> Next>></button>
             </div>
         </div>
 
